[tool.black]
line-length = 120
target-version = ['py314']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.pytest_cache
  | build
  | dist
)/
'''

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roam-pub"
version = "0.1.0"
description = "Markdown utilities for working with Roam Research exports"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "pyright>=1.1",
]

[project.scripts]
bundle-roam-md = "roam_pub.bundle_roam_md:app"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
include = ["src"]
exclude = [".venv"]
typeCheckingMode = "strict"
pythonVersion = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
